# FullJackCompiler

./: CMakeLists.txt
include/: JackAnalyzer.h
src/: CompilationEngine.cpp  JackAnalyzer.cpp  JackTokenizer.cpp  SymbolTable.cpp  VMWriter.cpp  main.cpp  reference.cpp
test/: Ball.xml  Square.vm  Square.xml
